versioned_docs/version-6.0.1/getting-started.md
---
sidebar_position: 1
sidebar_label: Getting Started
displayed_sidebar: null
hide_table_of_contents: true
slug: /
description: Entry point for Mobiscroll docs — choose your framework (JavaScript, React, Angular, Vue, jQuery) to start integrating UI components.
---

import DocCardList from "@theme/DocCardList";
import { frameworkLinks } from "./frameworkLinks.js";
import { connectLinks } from "./connectLinks.js";
import { aiLink } from "./aiLink.js"

# Welcome to the Mobiscroll Docs

Mobiscroll is a collection of UI components that helps deliver great mobile apps, websites with a great user experience and in getting five-star app store reviews. The controls follow platform UX guidelines and can be customized for a perfect fit.

## Mobiscroll UI

Mobiscroll can be integrated into many ecosystems, all of which might fall into one of the 5 officially supported ones. We call these ecosystems **frameworks** in this documentation but in a narrow sense of the word not all of these are actually javascript frameworks.

<DocCardList items={frameworkLinks} />

## Mobiscroll Connect

Mobiscroll Connect is an API service and sync engine that acts as a bridge between users' calendars (Google, Outlook, iCloud) and your app. It acts as a full-fledged OAuth 2.0 provider, enabling seamless integration with multiple calendar providers through a unified interface. Mobiscroll Connect handles authentication, provider selection, and consent management, exposing a standardized API for securely accessing calendar data.

<DocCardList items={connectLinks} />

## AI integration

Set up AI-powered coding assistants (Cursor, GitHub Copilot, Claude Code) with Mobiscroll documentation for accurate, framework-specific code generation.

<DocCardList items={aiLink} />
